<resources>
    <string name="app_name">Clap Finder</string>
    <string name="inapp_success_meaage">Subscription activated, Enjoy! Please Restart the App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thanks_message">Thanks for helping us improve!</string>
    <string name="reward_ad_not">Reward ad is not available.Please try again.</string>
    <string name="please_wait">Please Wait</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="restore_access"><u>Restore Access</u></string>
    <string name="license_agrement"><u>Term and conditions</u></string>
    <string name="cancel_any_time">Cancel anytime in the Play Store at no additional cost, your subscription will then cease at the end of the current term.</string>
    <string name="cancel_subscription_url">https://support.google.com/googleplay/answer/7018481</string>
    <string name="start_clap">Start Clap</string>
    <string name="add_sound">Add Sound</string>
    <string name="record_sound">Record Sound</string>
    <string name="import_audio">Import Audio</string>
    <string name="music_playlist">Music Playlist</string>
    <string name="loading">Loading...</string>
    <string name="how_to_use">How to Use</string>
    <string name="click_the_activate_button">Click the activate button</string>
    <string name="double_clap_when_your_can_t_find_your_phone">Double Clap when your can’t find your phone</string>
    <string name="this_app_will_detect_the_clapping_sound_and_start_ringing">This app will detect the clapping sound and start ringing</string>
    <string name="before_activating_you_can_set_the_flashlight_adjust_the_volume_and_select_alarm_sound">Before activating you can set the flashlight, adjust the volume and select alarm sound</string>
    <string name="select_language">Select Language</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="sounds">Sounds</string>
    <string name="add_sounds">Add Sounds</string>
    <string name="elevate_your_phone_finding_experience_with_clap">Elevate your phone finding experience with Clap.</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="unlock_premium_features">Weekly Premium</string>
    <string name="basic">BASIC</string>
    <string name="create_unlimited_sounds">Create Unlimited Sounds</string>
    <string name="unlimited_service_time">Unlimited Service Time</string>
    <string name="unlock_all_sounds">Unlock all Sounds</string>
    <string name="remove_ads">Remove All Ads</string>
    <string name="vip_costumer_support">VIP Costumer Support</string>
    <string name="pro">PRO</string>
    <string name="get_premium_in_2_99_week">Get premium in 2.99$ / week</string>
    <string name="start_now">Start Now</string>
    <string name="subscription_will_auto_renew_cancel_anytime">Subscription will auto-renew. Cancel anytime</string>
    <string name="tap_to_start_recording">Tap to Start Recording...</string>
    <string name="_00_00">00:00</string>
    <string name="recorded_sound">Recorded Sound</string>
    <string name="record_sound_toolbar_title">Voice recorder</string>
    <string name="record_sound_toolbar_subtitle">Create your personal finder sound</string>
    <string name="record_sound_studio_badge">CUSTOM SOUND</string>
    <string name="record_sound_ready_title">Ready to record</string>
    <string name="record_sound_hero_description">Capture a short, clear sound that is easy to recognize.</string>
    <string name="record_sound_ready_hint">Tap the microphone when you are ready.</string>
    <string name="record_sound_recording_title">Recording in progress</string>
    <string name="record_sound_recording_hint">Pause when needed, or tap finish to continue.</string>
    <string name="record_sound_paused_title">Recording paused</string>
    <string name="record_sound_paused_hint">Tap the center button to continue recording.</string>
    <string name="record_sound_timer_zero">00:00:00</string>
    <string name="record_sound_tip">For the clearest result, stay close to the microphone and reduce background noise.</string>
    <string name="record_sound_start_content_description">Start recording</string>
    <string name="record_sound_pause_content_description">Pause recording</string>
    <string name="record_sound_resume_content_description">Resume recording</string>
    <string name="record_sound_finish_content_description">Finish and save recording</string>
    <string name="record_sound_delete_content_description">Delete this recording</string>
    <string name="record_sound_permission_title">Microphone access needed</string>
    <string name="record_sound_permission_description">Enable microphone access in App Settings so you can create a custom finder sound.</string>
    <string name="record_sound_permission_privacy">The microphone is used only while you create your recording.</string>
    <string name="record_sound_open_settings">Open App Settings</string>
    <string name="save_sound">Save Sound</string>
    <string name="save_and_apply">Save and Apply</string>
    <string name="save_recording_toolbar_title">Save recording</string>
    <string name="save_recording_toolbar_subtitle">Review your custom finder sound</string>
    <string name="save_recording_final_step">FINAL STEP</string>
    <string name="save_recording_complete_badge">RECORDING COMPLETE</string>
    <string name="save_recording_ready_title">Your sound is ready</string>
    <string name="save_recording_ready_hint">Give it a clear name, preview it once, then choose how you want to save it.</string>
    <string name="save_recording_name_title">Name your sound</string>
    <string name="save_recording_name_hint">Choose a name you will recognize later</string>
    <string name="save_recording_name_placeholder">My custom sound</string>
    <string name="save_recording_edit_label">EDIT</string>
    <string name="save_recording_preview_title">Listen back</string>
    <string name="save_recording_preview_hint">Check that your recording sounds clear</string>
    <string name="save_recording_preview_badge">PREVIEW</string>
    <string name="save_recording_save_apply">Save &amp; use now</string>
    <string name="save_recording_save_library">Save to My Sounds</string>
    <string name="save_recording_tip">Your recording will be available anytime from My Sounds.</string>
    <string name="save_recording_back_content_description">Go back</string>
    <string name="save_recording_play_content_description">Play recording</string>
    <string name="save_recording_pause_content_description">Pause recording</string>
    <string name="save_recording_stop_content_description">Stop recording preview</string>
    <string name="save_recording_save_apply_content_description">Save and use this recording</string>
    <string name="save_recording_save_content_description">Save this recording to My Sounds</string>
    <string name="select_sound">Select Sound</string>
    <string name="settings">Settings</string>
    <string name="settings_back_content_description">Go back</string>
    <string name="settings_subtitle">Make the app respond your way</string>
    <string name="settings_preferences_section">APP PREFERENCES</string>
    <string name="settings_alerts_section">ALERT RESPONSE</string>
    <string name="settings_support_section">SUPPORT &amp; MORE</string>
    <string name="settings_subscription_hint">Unlock every premium feature</string>
    <string name="settings_language_hint">Language used throughout the app</string>
    <string name="settings_theme_hint">Use a darker appearance</string>
    <string name="settings_flash_hint">Blink the torch when your phone is found</string>
    <string name="settings_vibrate_hint">Add vibration to the alert</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="flashlight">Flashlight</string>
    <string name="flashlight_settings">Flashlight Settings</string>
    <string name="disco_mode">Disco Mode</string>
    <string name="sos_mode">SOS Mode</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibration_settings">Vibration Settings</string>
    <string name="strong_vibration">Strong Vibration</string>
    <string name="heart_beat">Heart Beat</string>
    <string name="general_settings">General Settings</string>
    <string name="customer_support">Customer Support</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us!</string>
    <string name="share">Share</string>
    <string name="cat_meowing">Cat Meowing</string>
    <string name="set_time_duration">Set Time Duration</string>
    <string name="loop">Loop</string>
    <string name="apply_this_sound">Apply this Sound</string>
    <string name="find_phone_by">Find Phone by</string>
    <string name="clapping">Clapping</string>
    <string name="stop_service">Stop Service</string>
    <string name="hey_we_re_listening_start_doing_clap_to_test_this_app">Hey, We\'re listening start doing clap to test this app.</string>
    <string name="good_but_make_a_louder_clap">Good, but make a louder clap...</string>
    <string name="clap_detected">Clap Detected</string>
    <string name="clap_detected_for_the_best_experience_please_keep_the_app_running_in_the_background">Clap detected! For the best experience, please keep the app running in the background.</string>
    <string name="okay">Okay</string>
    <string name="play_sound">Play Sound</string>
    <string name="apply">Apply</string>
    <string name="create_sound">Create Audio</string>
    <string name="confirm_to_exit">Confirm to Exit</string>
    <string name="tap_to_activate">Tap to Activate</string>
    <string name="tap_to_deactivate">Tap to Deactivate</string>
    <string name="vibration">Vibration</string>
    <string name="respond_with_phone_vibration">Respond with phone vibration</string>
    <string name="respond_with_phone_flash">Respond with phone Flash</string>
    <string name="loading_ads">Loading Ads...</string>
    <string name="rate_this_app_and_tell_others_what_you_think_add_more_description_here_if_you_want">Rate this app and tell others what you think. Add more description here if you want</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="watch_ad_to_apply_sound_or_purchase_subscription">Watch Ad to apply sound or purchase subscription...</string>
    <string name="go_premium">Go Premium</string>
    <string name="watch_ad">Watch Ad</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="storage_and_audio_recording_permission_is_required_for_find_phone_using_clap_please_grant_the_permission_in_the_app_settings">Storage and Audio Recording permission is required for Find Phone using Clap. Please grant the permission in the app settings.</string>
    <string name="go_to_settings">GO TO SETTINGS</string>
    <string name="you_ve_used_your_n1_free_trial">You’ve used your\n1 free trial.</string>
    <string name="get_premium_to_keep_using_nthese_features">Get Premium to keep using\nthese features.</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="not_now">Not Now</string>
    <string name="enjoying_find_phone_nby_clap">Enjoying Clap Finder?</string>
    <string name="we_will_work_harder_to_make_nyou_more_satisfied">Your feedback helps us make every update better.</string>
    <string name="rate_now">Submit rating</string>
    <string name="no_thanks">Maybe later</string>
    <string name="rating_dialog_badge">YOUR FEEDBACK</string>
    <string name="rating_dialog_tap_hint">Tap a star to share your experience</string>
    <string name="rating_dialog_low_label">Needs work</string>
    <string name="rating_dialog_high_label">Love it</string>
</resources>