<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/cardClr"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cross"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="right"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/baseline_close_24"/>

        <TextView
            android:id="@+id/nameSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:layout_gravity="center"
            android:text="@string/play_sound"
            android:maxLines="1"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playBtn"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:visibility="gone"
                android:src="@drawable/play"/>

            <ImageView
                android:id="@+id/pauseBtn"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/pause"/>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/playerDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp"
                android:text="@string/_00_00"/>

            <ImageView
                android:id="@+id/stopBtn"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/icon_stop"
                app:tint="@color/appClr"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:gravity="center"
                android:background="@drawable/shape_button_edges"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/textColor"
                android:layout_weight="1"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/applyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/shape_button_fill"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>